tests/snapshots/examples_fixtures/io__aoc_day2_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day2_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `read_file` requires effect `IO` in this function signature.

  examples/io/aoc_day2_haskell_style.flx:43:5
   |
43 |     read_file(path)
   |     ^^^^^^^^^
   |     --------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
