tests/snapshots/examples_fixtures/io__aoc_day2_part2_profile.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day2_part2_profile.flx
== compile ==
failed (compile)
== diagnostics ==
error[E011]: Private Member

Cannot access private member `solve_parsed_ranges`.

  examples/io/aoc_day2_part2_profile.flx:10:21
   |
10 |         let total = Day2.solve_parsed_ranges(parsed_ranges)
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.


error[E011]: Private Member

Cannot access private member `parse_ranges`.

  examples/io/aoc_day2_part2_profile.flx:15:21
   |
15 | let parsed_ranges = Day2.parse_ranges("examples/io/aoc_day2.txt")
   |                     ^^^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Time).

  examples/io/aoc_day2_part2_profile.flx:18:1
   |
18 | let t0 = now_ms()
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/io/aoc_day2_part2_profile.flx:18:1
   |
18 | let t0 = now_ms()
   | ^^^^^^^^^^^^^^^^^
   | ----------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `Time` but the enclosing context does not provide it

  examples/io/aoc_day2_part2_profile.flx:18:10
   |
18 | let t0 = now_ms()
   |          ^^^^^^^^
   |          -------- requires `Time`

Hint:
  annotate the enclosing function with `with Time`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Time).

  examples/io/aoc_day2_part2_profile.flx:20:1
   |
20 | let t1 = now_ms()
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `Time` but the enclosing context does not provide it

  examples/io/aoc_day2_part2_profile.flx:20:10
   |
20 | let t1 = now_ms()
   |          ^^^^^^^^
   |          -------- requires `Time`

Hint:
  annotate the enclosing function with `with Time`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/io/aoc_day2_part2_profile.flx:22:1
   |
22 | print("iterations:")
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/io/aoc_day2_part2_profile.flx:22:1
   |
22 | print("iterations:")
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/io/aoc_day2_part2_profile.flx:23:1
   |
23 | print(iterations)
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/io/aoc_day2_part2_profile.flx:23:1
   |
23 | print(iterations)
   | ^^^^^^^^^^^^^^^^^
   | ----------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/io/aoc_day2_part2_profile.flx:24:1
   |
24 | print("checksum:")
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/io/aoc_day2_part2_profile.flx:24:1
   |
24 | print("checksum:")
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/io/aoc_day2_part2_profile.flx:25:1
   |
25 | print(checksum)
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/io/aoc_day2_part2_profile.flx:25:1
   |
25 | print(checksum)
   | ^^^^^^^^^^^^^^^
   | --------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/io/aoc_day2_part2_profile.flx:26:1
   |
26 | print("elapsed_ms:")
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/io/aoc_day2_part2_profile.flx:26:1
   |
26 | print("elapsed_ms:")
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/io/aoc_day2_part2_profile.flx:27:1
   |
27 | print(t1 - t0)
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/io/aoc_day2_part2_profile.flx:27:1
   |
27 | print(t1 - t0)
   | ^^^^^^^^^^^^^^
   | -------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 19 errors.
== stdout ==
<not executed>
