tests/snapshots/examples_fixtures/io__aoc_day3_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day3_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E004]: Undefined Variable

I can't find a value named `best_with_digit`.

  examples/io/aoc_day3_haskell_style.flx:22:5
   |
22 |     best_with_digit(line, start_idx, k, 9)
   |     ^^^^^^^^^^^^^^^

Hint:
  Define it first: let best_with_digit = ...;


Error[E004]: Undefined Variable

I can't find a value named `try_occurrences`.

  examples/io/aoc_day3_haskell_style.flx:32:11
   |
32 |     match try_occurrences(line, digit_str, first_pos, k) {
   |           ^^^^^^^^^^^^^^^

Hint:
  Define it first: let try_occurrences = ...;


Error[E300]: Branch Type Mismatch

The branches of this `if` expression do not agree on a type.

  examples/io/aoc_day3_haskell_style.flx:58:5
   |
56 |         Some(0)
   |         ------- `then` branch returns `Int`

   |         ------- this branch established the expected type
57 |     } else {
58 |     match best_number_string(cleaned, 0, n) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
59 |         Some(s) -> Some(parse_int(s)),
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
60 |         _ -> None
   | ^^^^^^^^^^^^^^^^^
61 |     }
   | ^^^^^

Note:
  then branch type: Int
  else branch type: Option<Int>
  the `then` branch fixes the type expected from the whole `if`
  the `else` branch produces the competing type

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.


Note[E000]: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 3 errors.
== stdout ==
<not executed>
