tests/snapshots/examples_fixtures/io__aoc_day3_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day3_part1.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify numeric operands (Int or Float) with Option<Int> and Int.

  --> examples/io/aoc_day3_part1.flx:18:80
   |
18 |         let pair_here = if best_right < 0 { best_pair } else { max2(best_pair, d * 10 + best_right) }
   |                                                                                ^^^^^^
   |                                                                                ------ expected numeric operands (Int or Float), found Option<Int> and Int
   |                                                                                ------ operator operands are known at compile time

Help:
  adjust operand types or add explicit conversion


--> compiler error[E300]: TYPE UNIFICATION ERROR

The 2nd argument to `max2` has the wrong type.

  --> examples/io/aoc_day3_part1.flx:19:43
   |
 5 |     fn max2(a, b) {

 6 |         if a > b { a } else { b }

 7 |     }

 8 | 

 9 |     fn digit_at(line, idx) {

10 |         parse_int(substring(line, idx, idx + 1))

11 |     }

12 | 

13 |     fn max_bank_scan(line, idx, best_right, best_pair) {

14 |         if idx < 0 {

15 |             best_pair

16 |         } else {

17 |         let d = digit_at(line, idx)

18 |         let pair_here = if best_right < 0 { best_pair } else { max2(best_pair, d * 10 + best_right) }

19 |         let next_right = max2(best_right, d)
   |                                           ^
   |                                           - this argument is `Option<Int>`

Help:
  Expected `Int` as the 2nd argument.

Found 2 errors.
== stdout ==
<not executed>
