tests/snapshots/examples_fixtures/io__aoc_day3_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day3_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 4th argument to `best_digit_pos`.

  examples/io/aoc_day3_part2.flx:29:48
   |
 9 |     fn best_digit_pos(line, start, end_inclusive, best_digit, best_pos) {
10 |         if start > end_inclusive {
11 |             best_pos
12 |         } else {
13 |         let d = digit_at(line, start)
14 |         if d > best_digit {
15 |             best_digit_pos(line, start + 1, end_inclusive, d, start)
16 |         } else {
17 | 
18 |         best_digit_pos(line, start + 1, end_inclusive, best_digit, best_pos)
19 |     }
20 | }
21 | }
22 | 
23 | fn max_k_value(line, start, k, acc) {
24 |     if k == 0 {
25 |         acc
26 |     } else {
27 |     let n = len(line)
28 |     let end = n - k
29 |     let pos = best_digit_pos(line, start, end, -1, start)
   |                                                ^^
   |                                                -- this argument has type `Int`

Note:
  expected argument type: Option<Int>
  found argument type: Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Wrap this value in `Some(...)` or return `None`.


error[E300]: Type Mismatch

I found a type mismatch.

  examples/io/aoc_day3_part2.flx:31:39
   |
31 |     max_k_value(line, pos + 1, k - 1, acc * 10 + d)
   |                                       ^^^^^^^^^^^^
   |                                       ------------ this expression has type `Int and Option<Int>`

   |                                       ------------ operator operands are known at compile time

Note:
  expected type: matching '+' operands (Int+Int, Float+Float, or String+String)
  found type: Int and Option<Int>

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion

Found 2 errors.
== stdout ==
<not executed>
